2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c:
	define "Gtk/ShowInputMethodMenu"/"Gtk/ShowUnicodeMenu" xsettings,
	patch by Matthias Clasen (Closes: #319634).
	
2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* actions/acme-volume-dummy.c: (acme_volume_dummy_finalize):
	* actions/acme-volume.c: (acme_volume_class_init),
	(acme_volume_new):
	* clipboard-manager.c: (clipboard_bytes_per_item),
	(clipboard_manager_process_event):
	* gnome-settings-daemon.c:
	(gnome_settings_daemon_spawn_with_input):
	* gnome-settings-default-editor.c: (vfs_change_cb):
	* gnome-settings-keybindings.c: (grab_key):
	* gnome-settings-typing-break.c:
	* gnome-settings-xrdb.c: (scan_ad_directory):
	* gnome-settings-xsettings.c: (type_to_string):
	* xsettings-manager.c: Remove unused code and functions. Mark
	some functions static and fix other compiler warnings.

2005-10-21  Ray Strode  <rstrode@redhat.com>

	Remap buttons on auxillary mice for left-handed 
	mode (bug 314409).

	* gnome-settings-mouse.c  (supports_xinput_devices): new
	function to detect XInput Extension
	(configure_button_layout): new function to set up
	logical mouse button layout for left or right handed
	mode
	(xinput_device_has_buttons): new function to detect if
	an xinput device has buttons to reconfigure
	(set_xinput_devices_left_handed): new function to set
	auxillary mice into left-handed mode
	(set_left_handed): call set_xinput_devices_left_handed
	if available

2005-10-18  Rodrigo Moya <rodrigo@novell.com><>

	* gnome-settings-font.c (load_xcursor_theme):
	* gnome-settings-xsettings.c (gnome_xft_settings_set_xsettings):
	run xrdb with -nocpp, since it's not needed here.

2005-10-16  Rodrigo Moya <rodrigo@novell.com>

	* factory.c: declare a global GConfClient.
	(main): unref the global GConfClient.

	* gnome-settings-daemon.[ch] (gnome_settings_daemon_get_conf_client):
	new function to use the same GConfClient everywhere.