@@ -1,3 +1,11 @@
+2005-11-21  Jens Granseuer <jensgr@gmx.net>
+
+	Fixes #321778
+
+	* gnome-settings-daemon/gnome-settings-keyboard.c
+	(numlock_set_xkb_state, numlock_get_gconf_state): C89 compilation
+	fixes.
+
 2005-11-14  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-settings-xsettings.c:
